--- a/project2/styles.css
+++ b/project2/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap");
 /* Importerer en spesifikk font fra Google Fonts */
 
 /* Stil for hele body-elementet */
